--- a/src/site/content/feeds/neon-interactive-poster.njk
+++ b/src/site/content/feeds/neon-interactive-poster.njk
@@ -32,17 +32,35 @@ tags:
         </div>
     </div>
     <div class="particle-billboard">
-        <div class="particle--yellow">
+        <div id="kicikku-station">
+            <h1>MONO METROPOLITAN STATION</h1>
+            <h2>BUY YOUR FIRST TRAIN TICKET 20% DISCOUNT</h2>
         </div>
-        <div class="particle--yellow">
+        <div class="particle-rail">
+        <p>荃灣綫</p>
+        <p>⬤</p>
+        <p>觀塘綫</p>
+        <p>⬤</p>
+        <p>港島綫</p>
+        <p>⬤</p>
+        <p>南港島綫</p>
+        <p>⬤</p>
+        <p>將軍澳綫</p>
+        <p>⬤</p>
+        <p>東涌綫</p>
         </div>
-        <div class="particle--yellow">
-        </div>
-        <div class="particle--yellow">
-        </div>
-        <div class="particle--yellow">
-        </div>
-        <div class="particle--yellow">
+        <div id="english-edition" class="particle-rail">
+        <p>Tsuen Wan Line</p>
+        <p>⬤</p>
+        <p>Kwun Tong Line</p>
+        <p>⬤</p>
+        <p>Island Line</p>
+        <p>⬤</p>
+        <p>South Island Line</p>
+        <p>⬤</p>
+        <p>Tseung Kwan O Line</p>
+        <p>⬤</p>
+        <p>Tung Chung Line</p>
         </div>
     </div>
     <div class="blocks-billboard">
