--- a/src/site/content/feeds/neon-interactive-poster.njk
+++ b/src/site/content/feeds/neon-interactive-poster.njk
@@ -28,7 +28,7 @@ tags:
             <p>NOT INCLUDED TAX</p>
         </div>
         <div id="deep-star">
-            <h1>★★★★★</h1>
+            <h1>★★★★★☆☆☆☆☆☆☆</h1>
         </div>
     </div>
     <div class="particle-billboard">
@@ -65,17 +65,27 @@ tags:
     </div>
     <div class="blocks-billboard">
         <div id="red-neon" class="board-item">
-            <div id="chinese-mode" class="vertical-groups">
-                <h1 id="vertical-title" class="vertical-bill">24/7 全天候开放</h1>
-                <h1 class="vertical-bill">蔬菜维生素c</h1>
-                <h1 class="vertical-bill">蔬菜维生素c</h1>
-                <h1 class="vertical-bill">三文鱼和金枪鱼</h1>
+            <div id="oriental-list">
+                <div id="chinese-mode" class="vertical-groups">
+                    <h1 id="vertical-title" class="vertical-bill">24/7 全天候开放</h1>
+                    <h1 class="vertical-bill">蔬菜维生素c</h1>
+                    <h1 class="vertical-bill">蔬菜维生素c</h1>
+                    <h1 class="vertical-bill">三文鱼和金枪鱼</h1>
+                </div>
+                <div id="chinese-red-mode" class="vertical-groups">
+                    <h1 class="vertical-bill">经络辩证</h1>
+                    <h1 class="vertical-bill">气血辩证</h1>
+                    <h1 class="vertical-bill">气血辩证</h1>
+                    <h1 class="vertical-bill">津液辩证</h1>
+                </div>
             </div>
-            <div class="vertical-groups">
+            <div id="calzone-limited">
             <h1 id="vertical-title" class="vertical-bill">CALZONE LIMITED</h1>
             </div>
+            <div id="pharma-brand">
             <h1>UNDER PHARMA</h1>
             <h2>TRADITIONAL PHARMACY EST. 1942</h2>
+            </div>
         </div>
         <div id="lightgreen-neon" class="board-item">
             <div id="aqua-credit">
@@ -90,6 +100,8 @@ tags:
             </div>
         </div>
         <div id="lightblue-neon" class="board-item">
+            <p>★★ AVAILABLE HALAL ★★</p>
+            <h1>CHECK THE MORE MENU ON RIGHT SIDE</h1>
             <div class="new-menus">
                 <p>** COCONUT PANDAN</p>
                 <p>** FRIED SHRIMP BALL</p>
@@ -101,8 +113,20 @@ tags:
             <h2>DIMSUM 24 HOURS CLICK AWAY</h2>
         </div>
         <div id="purple-neon" class="board-item">
-            <h1 class="brand-item">VINTAGE BOXX</h1>
-            <h1>Classic Movies Cinema</h1>
+            <div class="featured-categories">
+                <h2>MIDNIGHT COWBOYS</h2>
+                <h2>SMOKE</h2>
+                <h2>IN THE MOOD FOR LOVE</h2>
+            </div>
+            <div class="cinema-heading">
+                <h1 class="brand-item">VINTAGE BOXX</h1>
+                <h1>Classic Movies Cinema</h1>
+            </div>
+            <div id="last-cinemas" class="featured-categories">
+                <h2>PULSE</h2>
+                <h2>KISS ME DEADLY</h2>
+                <h2>MURDER SHE WROTE</h2>
+            </div>
         </div>
     </div>
 </div>
