migrated from plex to fragment mono

--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -54,7 +54,7 @@
 }
 
 @font-face {
-  font-family: 'PlexMono';
+  font-family: 'FragmentMono';
   font-style: normal;
   font-weight: 400;
   font-display: optional;
@@ -63,7 +63,7 @@
 }
 
 @font-face {
-  font-family: 'PlexMono';
+  font-family: 'FragmentMono';
   font-style: italic;
   font-weight: 400;
   font-display: optional;
