--- a/src/scss/feeds/happiness-index.scss
+++ b/src/scss/feeds/happiness-index.scss
@@ -5,7 +5,7 @@
     background-color: #dbdee2;
     
     h1, h2 {
-        font-family: PlexMono,Consolas,Liberation Mono,Menlo,monospace;
+        font-family: FragmentMono,Consolas,Liberation Mono,Menlo,monospace;
     }
 }
 
