--- a/src/scss/feeds/neon-billboard.scss
+++ b/src/scss/feeds/neon-billboard.scss
@@ -9,13 +9,13 @@
 
     h1, h2, h3 {
         // font-family: 'Playfair Display', Arial, Helvetica, sans-serif;
-        font-family: PlexMono,SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace;
+        font-family: FragmentMono,SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace;
         color: white;
         font-weight: 400;
     }
 
     p {
-        font-family: PlexMono,SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace;
+        font-family: FragmentMono,SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace;
     }
 }
 
