--- a/src/scss/feeds/women-of-business.scss
+++ b/src/scss/feeds/women-of-business.scss
@@ -7,10 +7,10 @@
     display: flex;
     flex-direction: column;
     color: white;
-    font-family: PlexMono,Consolas,Liberation Mono,Menlo,monospace;
+    font-family: FragmentMono,Consolas,Liberation Mono,Menlo,monospace;
 
     h1, h2, h3, h4, h5, h6 {
-        font-family: PlexMono,Consolas,Liberation Mono,Menlo,monospace;
+        font-family: FragmentMono,Consolas,Liberation Mono,Menlo,monospace;
         font-weight: 400;
     }
 }
@@ -35,7 +35,7 @@
 #wof-headline {
     color: white;
     padding: 1em;
-    font-family: PlexMono,Consolas,Liberation Mono,Menlo,monospace;
+    font-family: FragmentMono,Consolas,Liberation Mono,Menlo,monospace;
     margin-inline: auto;
 }
 
