--- a/src/site/content/feeds/flex-guide-origami.njk
+++ b/src/site/content/feeds/flex-guide-origami.njk
@@ -13,29 +13,53 @@ tags:
 
 <div id="origami-page">
     <div class="replicate-first">
-        <img src="/images/feeds/nihon-tested.jpg" />
-        <div>
+        {# <img style="display: none;" src="/images/feeds/nihon-tested.jpg" /> #}
+
+        <div id="gami-poster">
+            <div id="posterhead-origami">
+                <h1 id="ayang-title">AYANG</h1>
+                <div id="established-ayang">
+                    <h1>SINCE 1994</h1>
+                    <h1>SINGAPORE</h1>
+                </div>
+                <h1>CONFERENCE</h1>
+                <h1>ISSUED 20</h1>
+            </div>
+            <div id="origami-trademark-company">
+                                    <h2>ORIGAMI</h2>
+                    <h2>COLORBALL FLEXING MANUAL GUIDE STANDARD COMPANY</h2>
+            </div>
+            <div id="pattern-origamis">
+                <div class="pattern-origami-item">
+                </div>
+                <div class="pattern-origami-item">
+                </div>
+                <div class="pattern-origami-item">
+                </div>
+            </div>
+        </div>
+        <div class="gami-flexes">
         <div class="gami-boxes">
             <div class="box-gami brown-gami">
             </div>
-            <h1>FLE</h1>
-            <div class="box-gami blue-gami">
-            </div>
-            <h1>X-S</h1>
+            <h1>FLEX</h1>
+            <h1>-START</h1>
             <div class="box-gami red-gami">
             </div>
-            <h1>TART</h1>
+            <div class="box-gami blue-gami">
+            </div>
+            <div class="box-gami">
+            </div>
         </div>
         <div id="boxes--flexend" class="gami-boxes">
-            <h1>FLE</h1>
             <div class="box-gami green-gami">
             </div>
             <div class="box-gami">
             </div>
-            <h1>X-E</h1>
-            <h1>ND</h1>
             <div class="box-gami">
             </div>
+            <h1>FLEX-</h1>
+            <h1>END</h1>
         </div>
         <div id="boxes__space-between" class="gami-boxes">
             <div class="box-gami">
@@ -54,8 +78,19 @@ tags:
             <div class="box-gami purple-gami">
             </div>
             <h1>AROUND</h1>
+            <div class="box-gami brown-gami">
+            </div>
+        </div>
+        <div id="boxes__space-evenly" class="gami-boxes">
             <div class="box-gami">
             </div>
+            <h1>SPACE-</h1>
+            <div class="box-gami purple-gami">
+            </div>
+            <h1>EVENLY</h1>
+            <div class="box-gami brown-gami">
+            </div>
+        </div>
         </div>
         </div>
     </div>
