--- a/src/site/content/feeds/neon-interactive-poster.njk
+++ b/src/site/content/feeds/neon-interactive-poster.njk
@@ -1,6 +1,6 @@
 ---
 layout: layouts/base.njk
-title: Testing Neon Interactive Poster
+title: NEON NIGHT INTERACTIVE POSTER WITH CINEMA
 styleScripts:
     - /css/neon-billboard.css
 draft: true
