--- a/src/site/_includes/layouts/jurnal.njk
+++ b/src/site/_includes/layouts/jurnal.njk
@@ -10,7 +10,7 @@ tags:
 
         <div class="sidebar">
             <article class="prose">
-                <header class="flow gap-bottom-size-3">
+                <header class="flow">
                     <h1 id="{{ safeTitle }}">{{ safeTitle }}</h1>
                 </header>
 
