--- a/src/site/content/feeds/flex-guide-origami.njk
+++ b/src/site/content/feeds/flex-guide-origami.njk
@@ -31,10 +31,54 @@ tags:
             </div>
             <div id="pattern-origamis">
                 <div class="pattern-origami-item">
+                    <div class="left-pt">
+                    <div class="full-pt-cl">
+                    </div>
+                    <div class="half-pt-cl">
+                    </div>
+                    <div class="half-pt-cl">
+                    </div>
+                    <div class="third-pt-cl">
+                    </div>
+                    </div>
                 </div>
                 <div class="pattern-origami-item">
+                    <div class="left-pt">
+                    <div class="full-pt-cl">
+                    </div>
+                    <div class="half-pt-cl">
+                        <div id="blue-mark" class="half-pt-cl">
+                        </div>
+                    </div>
+                    <div class="half-pt-cl">
+                    </div>
+                    <div class="third-pt-cl">
+                    </div>
+                    </div>
                 </div>
                 <div class="pattern-origami-item">
+                    <div class="left-pt">
+                    <div class="full-pt-cl">
+                    </div>
+                    <div class="half-pt-cl">
+                    </div>
+                    <div class="half-pt-cl">
+                    </div>
+                    <div class="third-pt-cl">
+                    </div>
+                    </div>
+                </div>
+                <div class="pattern-origami-item">
+                    <div class="left-pt">
+                        <div class="full-pt-cl">
+                        </div>
+                        <div class="half-pt-cl">
+                        </div>
+                        <div class="half-pt-cl">
+                        </div>
+                        <div class="third-pt-cl">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
