flexing pattern more

--- a/src/scss/feeds/guide-origami.scss
+++ b/src/scss/feeds/guide-origami.scss
@@ -85,6 +85,14 @@
     #blue-mark {
         background-color: #26bfd1;
     }
+
+    #red-mark {
+        background-color: #e8082a;
+    }
+
+    #green-mark {
+        background-color: #00947c;
+    }
 }
 
 .gami-boxes {
