--- a/src/site/content/feeds/flex-guide-origami.njk
+++ b/src/site/content/feeds/flex-guide-origami.njk
@@ -37,6 +37,8 @@ tags:
                     <div class="half-pt-cl">
                     </div>
                     <div class="half-pt-cl">
+                        <div id="red-mark" class="half-pt-cl">
+                        </div>
                     </div>
                     <div class="third-pt-cl">
                     </div>
@@ -58,13 +60,15 @@ tags:
                 </div>
                 <div class="pattern-origami-item">
                     <div class="left-pt">
-                    <div class="full-pt-cl">
-                    </div>
                     <div class="half-pt-cl">
                     </div>
                     <div class="half-pt-cl">
                     </div>
                     <div class="third-pt-cl">
+                    </div>
+                    <div class="full-pt-cl">
+                         <div id="green-mark" class="half-pt-cl">
+                        </div>
                     </div>
                     </div>
                 </div>
