--- a/src/site/content/feeds/flex-guide-origami.njk
+++ b/src/site/content/feeds/flex-guide-origami.njk
@@ -70,6 +70,10 @@ tags:
                          <div id="green-mark" class="half-pt-cl">
                         </div>
                     </div>
+                    <div class="half-pt-cl">
+                        <div id="red-mark" class="half-pt-cl">
+                        </div>
+                    </div>
                     </div>
                 </div>
                 <div class="pattern-origami-item">
@@ -78,9 +82,17 @@ tags:
                         </div>
                         <div class="half-pt-cl">
                         </div>
+                        <div class="full-pt-cl">
+                            <div id="red-mark" class="half-pt-cl">
+                            </div>
+                            <div id="blue-mark" class="half-pt-cl">
+                            </div>
+                        </div>
                         <div class="half-pt-cl">
                         </div>
                         <div class="third-pt-cl">
+                        </div>
+                        <div class="half-pt-cl">
                         </div>
                     </div>
                 </div>
@@ -123,10 +135,12 @@ tags:
             <div class="box-gami">
             </div>
             <h1>SPACE-</h1>
-            <div class="box-gami purple-gami">
+            <div class="box-gami brown-gami">
             </div>
             <h1>AROUND</h1>
-            <div class="box-gami brown-gami">
+            <div class="box-gami purple-gami">
+            </div>
+            <div class="box-gami">
             </div>
         </div>
         <div id="boxes__space-evenly" class="gami-boxes">
