couple of colors

--- a/src/site/content/feeds/flex-guide-origami.njk
+++ b/src/site/content/feeds/flex-guide-origami.njk
@@ -110,6 +110,16 @@ tags:
             </div>
             <div class="box-gami">
             </div>
+            <div class="box-gami">
+            </div>
+            <div class="box-gami">
+            </div>
+            <div class="box-gami">
+            </div>
+            <div class="box-gami">
+            </div>
+            <div class="box-gami">
+            </div>
         </div>
         <div id="boxes--flexend" class="gami-boxes">
             <div class="box-gami green-gami">
@@ -120,6 +130,16 @@ tags:
             </div>
             <h1>FLEX-</h1>
             <h1>END</h1>
+            <div class="box-gami">
+            </div>
+            <div class="box-gami">
+            </div>
+            <div class="box-gami">
+            </div>
+            <div class="box-gami">
+            </div>
+            <div class="box-gami">
+            </div>
         </div>
         <div id="boxes__space-between" class="gami-boxes">
             <div class="box-gami">
@@ -128,6 +148,16 @@ tags:
             <div class="box-gami purple-gami">
             </div>
             <h1>BETWEEN</h1>
+            <div class="box-gami">
+            </div>
+                        <div class="box-gami">
+            </div>
+            <div class="box-gami">
+            </div>
+            <div class="box-gami">
+            </div>
+            <div class="box-gami">
+            </div>
             <div class="box-gami">
             </div>
         </div>
